# validated-fields

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs
tests/: anyhow.rs  compile_fail.rs  from.rs  nest.rs
tests/compile_fail/: enum.rs  enum.stderr  generics.rs  generics.stderr
