[package]
name = "validated-fields"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"

[dev-dependencies]
anyhow = "1.0"
itertools = "0.12"
nonempty-collections = "0.1"
trybuild = { version = "1.0", features = ["diff"] }
validated = "0.4"
