[package]
name = "validated-fields"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"

[dev-dependencies]
anyhow = "1.0"
itertools = "0.14"
nonempty-collections = "1.0"
trybuild = { version = "1.0", features = ["diff"] }
validated = "1.0"
